fix(section-reviews): shifting the subtitle to hit the perfect pixel

--- a/assets/sass/components/_section-reviews.scss
+++ b/assets/sass/components/_section-reviews.scss
@@ -301,6 +301,10 @@
                   font-size: 1.4375rem; //23px;
                   line-height: 1.20;
                   letter-spacing: 0.04em;
+
+                  position: relative;
+                  left: -1px;
+                  top: -1px;
                 }
               }
 
